# webserv

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  create_module.sh  default.conf  format.sh  run.sh  test.sh
.github/workflows/: clang_format.yml  linux.yml  macos.yml  unittests.yml
src/: CMakeLists.txt  WebServ.cpp  WebServ.hpp  main.cpp
src/ASyncServer/: CMakeLists.txt
src/ASyncServer/src/: CMakeLists.txt  Client.cpp  Client.hpp  Server.cpp  Server.hpp
src/ASyncServer/tst/: Client.cpp  Server.cpp
src/AlignedStorage/: CMakeLists.txt
src/AlignedStorage/src/: CMakeLists.txt  aligned_storage.hpp
src/AlignedStorage/tst/: CMakeLists.txt
src/Config/: CMakeLists.txt
src/Config/src/: CMakeLists.txt  Layer.cpp  Layer.hpp  Parser.cpp  Parser.hpp
src/Config/tst/: CMakeLists.txt  Layer.cpp  additional_conf.txt  config.txt  nginx_example.txt
src/Debugging/: CMakeLists.txt
src/Debugging/src/: iostream.cpp  iostream.hpp
src/Debugging/tst/: Debugging.cpp
src/Examples/: CMakeLists.txt
src/Examples/src/: BufReader.cpp  CMakeLists.txt  ClientParsing.cpp  HttpRequest.cpp  Select.cpp
src/FileDesc/: CMakeLists.txt  FileDesc.cpp  FileDesc.hpp  main.cpp
src/FileDesc/src/: CMakeLists.txt  FileDesc.cpp  FileDesc.hpp
src/FileDesc/tst/: main.cpp  write_and_read.cpp
src/HTTP/: CMakeLists.txt
src/HTTP/src/: CMakeLists.txt  Request.cpp  Request.hpp  Response.cpp  Response.hpp  State.cpp  State.hpp  URI.cpp  URI.hpp
src/HTTP/tst/: CMakeLists.txt  Request.cpp  Response.cpp  main.cpp
src/Net/: CMakeLists.txt
src/Net/src/: CMakeLists.txt  IpAddr.cpp  IpAddr.hpp  Socket.cpp  Socket.hpp  SocketAddr.cpp  SocketAddr.hpp  TcpListener.cpp  TcpListener.hpp  TcpStream.cpp  TcpStream.hpp
src/Net/tst/: CMakeLists.txt  IpAddr.cpp  Socket.cpp  SocketAddr.cpp  TcpListener.cpp  main.cpp
src/Option/: CMakeLists.txt  README.md  test.cpp
src/Option/src/: optional.hpp
src/Option/tst/: CMakeLists.txt  optional.cpp
src/Result/: CMakeLists.txt  test.cpp
src/Result/src/: CMakeLists.txt  result.hpp
src/Result/tst/: CMakeLists.txt  result.cpp
src/ServerLogic/: CMakeLists.txt
src/ServerLogic/src/: CMakeLists.txt  ServerLogic.cpp  ServerLogic.hpp
src/ServerLogic/tst/: CMakeLists.txt  ServerLogic.cpp
src/Slice/: CMakeLists.txt  README.md
src/Slice/src/: CMakeLists.txt  Slice.cpp  Slice.hpp
src/Slice/tst/: basic_tests.cpp  iterationTests.cpp  relationalTests.cpp  splitTests.cpp  trim_tests.cpp
src/Socket/: CMakeLists.txt
src/Socket/src/: CMakeLists.txt  IpAddr.cpp  IpAddr.hpp  Socket.cpp  Socket.hpp  SocketAddr.cpp  SocketAddr.hpp  TcpListener.cpp  TcpListener.hpp  TcpStream.cpp  TcpStream.hpp
src/Socket/tst/: IpAddr.cpp  Socket.cpp  SocketAddr.cpp  TcpListener.cpp  main.cpp
src/Str/: .gitignore  CMakeLists.txt  README.md
src/Str/src/: Str.cpp  Str.hpp
src/Str/tst/: basic_tests.cpp  creationTests.cpp  iterationTests.cpp  relationalTests.cpp  splitTests.cpp  tests.hpp  trim_tests.cpp
src/Sys/: CMakeLists.txt  README.md
src/Sys/src/: BufReader.hpp  CMakeLists.txt  File.cpp  File.hpp  FileDesc.cpp  FileDesc.hpp
src/Sys/tst/: BufReader.cpp  CMakeLists.txt  FileDesc.cpp  buf_line_by_line.txt
src/Traits/: CMakeLists.txt  test.cpp
src/Traits/src/: CMakeLists.txt  type_traits.hpp
src/Traits/tst/: type_traits.cpp
src/Tree/: CMakeLists.txt
src/Tree/src/: CMakeLists.txt  Tree.hpp
src/Tree/tst/: Tree.cpp
src/Utils/: CMakeLists.txt
src/Utils/src/: CMakeLists.txt  Utils.cpp  Utils.hpp  pair.hpp  rvalue.hpp  type_traits.hpp
src/Utils/tst/: basic_tests.cpp  main.cpp  pair_tests.cpp  runtime_error_tests.cpp  time_tests.cpp  unique_ptr_tests.cpp
src/VirtualServer/: CMakeLists.txt
src/VirtualServer/src/: CMakeLists.txt  VirtualServer.cpp  VirtualServer.hpp
src/VirtualServer/tst/: CMakeLists.txt  VirtualServer.cpp  config.txt
src/WebservConfig/: CMakeLists.txt
src/WebservConfig/src/: WebservConfig.cpp  WebservConfig.hpp
src/WebservConfig/tst/: WebservConfig.cpp
src/test_module1/: CMakeLists.txt
src/test_module1/src/: Formula.cpp  Formula.hpp
src/test_module1/tst/: CMakeLists.txt  Formula-test.cpp  main.cpp
tst/: CMakeLists.txt  HttpParsing.cpp  SetUp.cpp  error.conf
tst/42/: Dockerfile  conf.env  entrypoint.sh  run.sh  ubuntu_tester.conf
