add_subdirectory(Utils)
add_subdirectory(Slice)
add_subdirectory(Debugging)
add_subdirectory(Sys)
add_subdirectory(Net)
add_subdirectory(Option)
add_subdirectory(Result)
add_subdirectory(Traits)
add_subdirectory(ASyncServer)
add_subdirectory(HTTP)
add_subdirectory(Config)
add_subdirectory(VirtualServer)
add_subdirectory(ServerLogic)

# Only for testing
add_subdirectory(Examples)

include_directories(Utils)
include_directories(Slice)
include_directories(Debugging)
include_directories(Sys)
include_directories(Net)
include_directories(Option)
include_directories(Result)
include_directories(Traits)
include_directories(ASyncServer)
include_directories(HTTP)
include_directories(Config)
include_directories(VirtualServer)
include_directories(ServerLogic)
